tests/machine/x/cpp/group_by_conditional_sum.error
line 45: ../../../tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:45:36: error: ‘g’ was not declared in this scope
   45 |     std::vector<std::pair<decltype(g.key), __struct3>> __items;
      |                                    ^
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:45:44: error: template argument 1 is invalid
   45 |     std::vector<std::pair<decltype(g.key), __struct3>> __items;
      |                                            ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:45:53: error: template argument 1 is invalid
   45 |     std::vector<std::pair<decltype(g.key), __struct3>> __items;
      |                                                     ^~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:45:53: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:47:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   47 |       __items.push_back(
      |               ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:54:41: error: ‘x’ was not declared in this scope
   54 |                   std::vector<decltype((x.flag ? x.val : 0))> __items;
      |                                         ^
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:54:61: error: template argument 1 is invalid
   54 |                   std::vector<decltype((x.flag ? x.val : 0))> __items;
      |                                                             ^
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:54:61: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:56:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   56 |                     __items.push_back((x.flag ? x.val : 0));
      |                             ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:53:19:   required from here
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:52:44: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
   52 |                   return std::accumulate(v.begin(), v.end(), 0);
      |                                          ~~^~~~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:52:55: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
   52 |                   return std::accumulate(v.begin(), v.end(), 0);
      |                                                     ~~^~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:70:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   70 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:70:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
   70 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:73:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   73 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from ../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:2:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:73:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   73 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:35: error: no match for ‘operator<<’ (operand types are ‘std::basic_ostream<char>::__ostream_type’ {aka ‘std::basic_ostream<char>’} and ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’})
   82 |       std::cout << std::boolalpha << __tmp1[i];
/usr/include/c++/13/ostream:110:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(__ostream_type& (*)(__ostream_type&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  110 |       operator<<(__ostream_type& (*__pf)(__ostream_type&))
      |       ^~~~~~~~
/usr/include/c++/13/ostream:110:36: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘std::basic_ostream<char>::__ostream_type& (*)(std::basic_ostream<char>::__ostream_type&)’ {aka ‘std::basic_ostream<char>& (*)(std::basic_ostream<char>&)’}
  110 |       operator<<(__ostream_type& (*__pf)(__ostream_type&))
      |                  ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/ostream:119:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(__ios_type& (*)(__ios_type&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>; __ios_type = std::basic_ios<char>]’
  119 |       operator<<(__ios_type& (*__pf)(__ios_type&))
      |       ^~~~~~~~
/usr/include/c++/13/ostream:119:32: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘std::basic_ostream<char>::__ios_type& (*)(std::basic_ostream<char>::__ios_type&)’ {aka ‘std::basic_ios<char>& (*)(std::basic_ios<char>&)’}
  119 |       operator<<(__ios_type& (*__pf)(__ios_type&))
      |                  ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
/usr/include/c++/13/ostream:129:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(std::ios_base& (*)(std::ios_base&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  129 |       operator<<(ios_base& (*__pf) (ios_base&))
      |       ^~~~~~~~
/usr/include/c++/13/ostream:129:30: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘std::ios_base& (*)(std::ios_base&)’
  129 |       operator<<(ios_base& (*__pf) (ios_base&))
      |                  ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
/usr/include/c++/13/ostream:168:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  168 |       operator<<(long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:168:23: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘long int’
  168 |       operator<<(long __n)
      |                  ~~~~~^~~
/usr/include/c++/13/ostream:172:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  172 |       operator<<(unsigned long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:172:32: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘long unsigned int’
  172 |       operator<<(unsigned long __n)
      |                  ~~~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:176:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(bool) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  176 |       operator<<(bool __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:176:23: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘bool’
  176 |       operator<<(bool __n)
      |                  ~~~~~^~~
In file included from /usr/include/c++/13/ostream:880:
/usr/include/c++/13/bits/ostream.tcc:96:5: note: candidate: ‘std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(short int) [with _CharT = char; _Traits = std::char_traits<char>]’
   96 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:97:22: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘short int’
   97 |     operator<<(short __n)
      |                ~~~~~~^~~
/usr/include/c++/13/ostream:183:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(short unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  183 |       operator<<(unsigned short __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:183:33: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘short unsigned int’
  183 |       operator<<(unsigned short __n)
      |                  ~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/ostream.tcc:110:5: note: candidate: ‘std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(int) [with _CharT = char; _Traits = std::char_traits<char>]’
  110 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:111:20: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘int’
  111 |     operator<<(int __n)
      |                ~~~~^~~
/usr/include/c++/13/ostream:194:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  194 |       operator<<(unsigned int __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:194:31: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘unsigned int’
  194 |       operator<<(unsigned int __n)
      |                  ~~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:203:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long long int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  203 |       operator<<(long long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:203:28: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘long long int’
  203 |       operator<<(long long __n)
      |                  ~~~~~~~~~~^~~
/usr/include/c++/13/ostream:207:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long long unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  207 |       operator<<(unsigned long long __n)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:207:37: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘long long unsigned int’
  207 |       operator<<(unsigned long long __n)
      |                  ~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:222:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(double) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  222 |       operator<<(double __f)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:222:25: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘double’
  222 |       operator<<(double __f)
      |                  ~~~~~~~^~~
/usr/include/c++/13/ostream:226:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(float) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  226 |       operator<<(float __f)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:226:24: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘float’
  226 |       operator<<(float __f)
      |                  ~~~~~~^~~
/usr/include/c++/13/ostream:234:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long double) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  234 |       operator<<(long double __f)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:234:30: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘long double’
  234 |       operator<<(long double __f)
      |                  ~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:292:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(const void*) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]’
  292 |       operator<<(const void* __p)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:292:30: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘const void*’
  292 |       operator<<(const void* __p)
      |                  ~~~~~~~~~~~~^~~
/usr/include/c++/13/ostream:297:7: note: candidate: ‘std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(std::nullptr_t) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>; std::nullptr_t = std::nullptr_t]’
  297 |       operator<<(nullptr_t)
      |       ^~~~~~~~
/usr/include/c++/13/ostream:297:18: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘std::nullptr_t’
  297 |       operator<<(nullptr_t)
      |                  ^~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:124:5: note: candidate: ‘std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(__streambuf_type*) [with _CharT = char; _Traits = std::char_traits<char>; __streambuf_type = std::basic_streambuf<char>]’
  124 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:125:34: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} to ‘std::basic_ostream<char>::__streambuf_type*’ {aka ‘std::basic_streambuf<char>*’}
  125 |     operator<<(__streambuf_type* __sbin)
      |                ~~~~~~~~~~~~~~~~~~^~~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:761:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, basic_string_view<_CharT, _Traits>)’
  761 |     operator<<(basic_ostream<_CharT, _Traits>& __os,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:761:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   ‘__struct3’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:4032:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 4032 |     operator<<(basic_ostream<_CharT, _Traits>& __os,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4032:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’} is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
In file included from /usr/include/c++/13/bits/memory_resource.h:38,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/cstddef:124:5: note: candidate: ‘template<class _IntegerType> constexpr std::__byte_op_t<_IntegerType> std::operator<<(byte, _IntegerType)’
  124 |     operator<<(byte __b, _IntegerType __shift) noexcept
      |     ^~~~~~~~
/usr/include/c++/13/cstddef:124:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:17: note:   cannot convert ‘std::cout.std::basic_ostream<char>::operator<<(std::boolalpha)’ (type ‘std::basic_ostream<char>::__ostream_type’ {aka ‘std::basic_ostream<char>’}) to type ‘std::byte’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |       ~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:339:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const error_code&)’
  339 |     operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __e)
      |     ^~~~~~~~
/usr/include/c++/13/system_error:339:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘const std::error_code&’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:554:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, _CharT)’
  554 |     operator<<(basic_ostream<_CharT, _Traits>& __out, _CharT __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:554:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   deduced conflicting types for parameter ‘_CharT’ (‘char’ and ‘__struct3’)
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:564:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, char)’
  564 |     operator<<(basic_ostream<_CharT, _Traits>& __out, char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:564:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘char’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:570:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, char)’
  570 |     operator<<(basic_ostream<char, _Traits>& __out, char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:570:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘char’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:581:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, signed char)’
  581 |     operator<<(basic_ostream<char, _Traits>& __out, signed char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:581:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘signed char’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:586:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, unsigned char)’
  586 |     operator<<(basic_ostream<char, _Traits>& __out, unsigned char __c)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:586:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘unsigned char’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:645:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const _CharT*)’
  645 |     operator<<(basic_ostream<_CharT, _Traits>& __out, const _CharT* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:645:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   mismatched types ‘const _CharT*’ and ‘__struct3’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/bits/ostream.tcc:307:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const char*)’
  307 |     operator<<(basic_ostream<_CharT, _Traits>& __out, const char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/bits/ostream.tcc:307:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘const char*’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:662:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const char*)’
  662 |     operator<<(basic_ostream<char, _Traits>& __out, const char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:662:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘const char*’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:675:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const signed char*)’
  675 |     operator<<(basic_ostream<char, _Traits>& __out, const signed char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:675:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘const signed char*’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:680:5: note: candidate: ‘template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const unsigned char*)’
  680 |     operator<<(basic_ostream<char, _Traits>& __out, const unsigned char* __s)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:680:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46: note:   cannot convert ‘__tmp1.std::vector<__struct3>::operator[](i)’ (type ‘__gnu_cxx::__alloc_traits<std::allocator<__struct3>, __struct3>::value_type’ {aka ‘std::allocator_traits<std::allocator<__struct3> >::value_type’}) to type ‘const unsigned char*’
   82 |       std::cout << std::boolalpha << __tmp1[i];
      |                                              ^
/usr/include/c++/13/ostream:801:5: note: candidate: ‘template<class _Ostream, class _Tp> _Ostream&& std::operator<<(_Ostream&&, const _Tp&)’
  801 |     operator<<(_Ostream&& __os, const _Tp& __x)
      |     ^~~~~~~~
/usr/include/c++/13/ostream:801:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/ostream: In substitution of ‘template<class _Ostream, class _Tp> _Ostream&& std::operator<<(_Ostream&&, const _Tp&) [with _Ostream = std::basic_ostream<char>&; _Tp = __struct3]’:
../../../tests/machine/x/cpp/group_by_conditional_sum.cpp:82:46:   required from here
/usr/include/c++/13/ostream:801:5: error: no type named ‘type’ in ‘struct std::enable_if<false, void>’

 44 |     }
 45 |     std::vector<std::pair<decltype(g.key), __struct3>> __items;
 46 |     for (auto &g : __groups) {
